--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown parser</title>
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/src/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,6 +21,6 @@
     <section id="parsed">
     </section>
 </body>"
-<script src="./js/main.js" type="module"></script>
+<script src="/src/js/main.js" type="module"></script>
 
 </html>
