--- a/src/html/textarea.html
+++ b/src/html/textarea.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown parser</title>
-    <link href="./src/css/styles.css" rel="stylesheet">
+    <link href="/src/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <section class="editor" id="editor" name="editor" contenteditable="true"># example</section>
+    <textarea class="editor" id="editor" name="editor"># example</textarea>
     <hr>
     <br>
     <button id="parseMode"></button>
@@ -18,8 +18,8 @@
     <hr>
     <section id="parsed">
     </section>
+    <a href="/index.html">section</a>
 </body>
-<a href="./src/html/textarea.html">textArea</a>
-<script src="./src/js/main.js" type="module"></script>
+<script src="/src/js/main.js" type="module"></script>
 
 </html>
